# tldr-python-client

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py  tldr  tldr.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: publish.yml  test.yml
docs/: Makefile  conf.py  index.rst
docs/man/: tldr.1
snap/: snapcraft.yaml  test-snapcraft.yaml
tests/: test_tldr.py
tests/data/: gem.md  gem_rendered  jq.md  jq_rendered
