[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tldr"
dynamic = ["version"]
description = "Official Python command line client for tldr pages."
readme = "README.md"
license = "MIT"
requires-python = "~=3.9"
authors = [
    { name = "Felix Yan and tldr-pages contributors" },
]
keywords = [
  "tldr",
  "tldr-pages",
  "cheatsheets",
  "man",
  "manpages",
  "documentation"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Android",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: POSIX :: BSD :: NetBSD",
    "Operating System :: POSIX :: BSD :: OpenBSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: SunOS/Solaris",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: System",
    "Topic :: Utilities",
]
dependencies = [
    "colorama; sys_platform=='win32'",
    "shtab>=1.3.10",
    "termcolor",
]
[project.optional-dependencies]
cli = [
    "pytest",
    "pytest-runner",
    "flake8",
    "sphinx",
    "sphinx-argparse"
]

[project.scripts]
tldr = "tldr:cli"

[project.urls]
Homepage = "https://tldr.sh"
Source = "https://github.com/tldr-pages/tldr-python-client"
Issues = "https://github.com/tldr-pages/tldr-python-client/issues"
Changelog = "https://github.com/tldr-pages/tldr-python-client/blob/main/CHANGELOG.md"
Funding = "https://liberapay.com/tldr-pages"

[tool.hatch.version]
path = "tldr.py"
attr = "__version__"

[tool.hatch.build.targets.wheel.shared-data]
"docs/man" = "share/man/man1"

[tool.hatch.build.targets.sdist]
include = [
    "tldr.py",
    "README.md",
    "LICENSE.md",
    "CHANGELOG.md",
    "docs/man/tldr.1",
]
